--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "Ao iniciar este projeto, você concorda com as diretrizes do Código de Ética e Conduta e do Manual da Pessoa Estudante da Trybe.",
   "main": "script.js",
+  "homepage": "https://thiagoteixas.github.io/trybewarts",
   "scripts": {
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
-    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
-    "cypress:open": "cypress open",
-    "test": "cypress run",
-    "cy:browser": "cypress run --headless --browser chrome"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -20,7 +18,6 @@
   "bugs": {
     "url": "https://github.com/betrybe/sd-0x-project-trybewarts-rubric/issues"
   },
-  "homepage": "https://github.com/betrybe/sd-0x-project-trybewarts-rubric#readme",
   "devDependencies": {
     "@david-boydell/cypress-layout": "0.0.2",
     "@types/cypress": "1.1.3",
@@ -31,6 +28,7 @@
     "eslint-config-trybe-fundamentals": "^1.1.0",
     "eslint-plugin-cypress": "2.11.2",
     "eslint-plugin-import": "2.22.1",
+    "gh-pages": "^3.2.3",
     "minimist": "1.2.5",
     "mocha": "8.3.0",
     "mochawesome": "6.2.2",
